feat: implementado login con Firebase Auth y control de roles

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.idea/
+.gradle/
 local.properties
+
+*.iml
+misc.xml
+discord.xml
+deviceManager.xml
+
+google-services.json
+/build/
+app/build/
+
+captures/
+.DS_Store
