--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation libs.glide
+
 
 
     // Firebase BoM
